--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_credit_card: 0.1.4
+
 
 
   # The following adds the Cupertino Icons font to your application.
